# clazy-inspection-checker

./: CMakeLists.txt  README.md  main.cpp
test/: connect-by-name.cpp  connect-non-signal.cpp  connect-not-normalized.cpp  container-anti-pattern.cpp  empty-qstringliteral.cpp  lambda-in-connect.cpp  qgetenv.cpp  string-allocations.cpp
test/level0/: connect-by-name.cpp  connect-non-signal.cpp  connect-not-normalized.cpp  container-anti-pattern.cpp  empty-qstringliteral.cpp  lambda-in-connect.cpp  qenums.cpp  qgetenv.cpp  qstring-ref.cpp
test/level1/: auto-unexpected-qstringbuilder.cpp
test/level2/: string-allocations.cpp
